Prevent word wrap in cells

--- a/src/static/css/themes/_proposals.scss
+++ b/src/static/css/themes/_proposals.scss
@@ -98,9 +98,16 @@ body.dashboard{
     thead{
         background:#F8F8F8;
     }
-    th{
+    th, td {
         font-weight: 400;
-        font-size:13px;
+        font-size: 13px;
+        white-space: nowrap;
+
+        &.proposal-title {
+            white-space: normal;
+        }
+    }
+    th{
         color:#9B9B9B;
         line-height:22px;
         border-bottom: 1px solid #EEEEEE;
@@ -112,8 +119,6 @@ body.dashboard{
         }
     }
     td{
-        font-weight: 400;
-        font-size:13px;
         color:#4A4A4A;
         line-height: 25px;
         padding: 32px 34px;
